--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon -q dist/app.js\""
   },
   "author": "",
   "license": "ISC",
